Bug 234492 - Filters are not applied in month view
Summary: Filters are not applied in month view
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-16 00:52 UTC by Sabine Faure
Modified: 2010-06-26 00:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-04-16 00:52:28 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Create an event for today with Business as a category (ex Event A)
- Create another event for today with Holiday as a category (ex Event B)
- Check that the event is properly displayed in both agenda and month views
- Go to Settings menu/Manage View Filters...
- Click on 'New' button
- Give a name to the filter (ex filter 1), uncheck all the check boxes and select the first radio button 'Show only selected'
- Click on 'Change...' button
- Check the 'Business' check box
- Click on 'Ok' twice
- Go to View menu/Filter/filter 1

Event A is displayed in both the agenda and month view as it should be but Event B is displayed in month view whereas it should not be displayed at all (neither in agenda or month view)

Trunk, Svn Rev 1115106
Comment 1 Sergio Martins 2010-06-01 19:12:50 UTC
SVN commit 1133407 by smartins:

Filters working in month view.

BUG: 234492


 M  +2 -0      actionmanager.cpp  
 M  +2 -0      calendarview.cpp  
 M  +5 -0      interfaces/korganizer/baseview.cpp  
 M  +11 -0     interfaces/korganizer/baseview.h  
 M  +9 -0      koviewmanager.cpp  
 M  +9 -0      koviewmanager.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1133407
Comment 2 Sabine Faure 2010-06-26 00:13:15 UTC
It is corrected now.

The filters are applied correctly in both agenda and month view now.

Trunk, Svn Rev 1142760