Filters working in month view.

BUG: 234492

svn path=/trunk/KDE/kdepim/; revision=1133407